--- a/src/css/index.css
+++ b/src/css/index.css
@@ -52,6 +52,18 @@ textarea{
   resize: vertical;
 }
 
+.textareaInvalid{
+  min-width: 89vw;
+  height:40px;
+  font-size:12px;
+  border:none;
+  background-color:rgb(217, 240, 255);
+  border:1px solid rgb(151, 151, 151);
+  border: 1px solid rgb(40, 167, 255);
+  resize: vertical;
+  border:1px solid red;
+}
+
 .pallet{
    display:flex;
    flex-direction: row;
