--- a/src/css/md.css
+++ b/src/css/md.css
@@ -3,13 +3,50 @@
 */
 
 /** Title 1   # */      /** class */   
-
+.t1{
+    padding-bottom: .3em;
+    font-size: 2em;
+    border-bottom: 1px solid var(--color-border-muted);
+    margin-top: 24px;
+    margin-bottom: 16px;
+    font-weight: var(--base-text-weight-semibold, 600);
+    line-height: 1.25;
+    box-sizing: border-box;
+}
 /** Title 2 ## */       /** class */ 
-
+.t2{
+    padding-bottom: .3em;
+    font-size: 1.5em;
+    border-bottom: 1px solid var(--color-border-muted);
+    margin-top: 24px;
+    margin-bottom: 16px;
+    font-weight: var(--base-text-weight-semibold, 600);
+    line-height: 1.25;
+    box-sizing: border-box;
+}
 /** Title 3 ### */      /** class */ 
-
+.t3{
+    font-size: 1.25em;
+    margin-top: 24px;
+    margin-bottom: 16px;
+    font-weight: var(--base-text-weight-semibold, 600);
+    line-height: 1.25;
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
 /** Bold  ** ** */      /** class */ 
-
+.b{
+    font-weight: var(--base-text-weight-semibold, 600);
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    font-size: 16px;
+    line-height: 1.5;
+    word-wrap: break-word;
+}
 /** cursiva * *  */     /** class */ 
 
 /** tachado ~~ ~~ */        /** class */ 
