se añade parrafo

--- a/src/css/md.css
+++ b/src/css/md.css
@@ -39,6 +39,17 @@
     margin-inline-end: 0px;
     font-weight: bold;
 }
+
+/** Elemento parrafo */
+
+.p{
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
 /** Bold  ** ** */      /** class */ 
 .b{
     font-weight: var(--base-text-weight-semibold, 600);
